Se agrega últimos detalles como padding al footer

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
       <!-- Termina Contenedor Tabla Peso Mexicano con otras divisas -->
 
     </div>
-    <footer class=" d-flex justify-content-center  align-items-center text-bg-secondary py-3">
+    <footer class=" d-flex justify-content-center  align-items-center text-bg-secondary py-3 px-5">
       <p class="">This website and API do not track you. The content of this website is licensed CC BY NC SA 4.0.</p>
       
     </footer>
